# lindenmayer-sfml-2d-tree-generator

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md
include/: TreeGenerator.h  TreeOperations.h  TreeParams.h  TreeTurtle.h  debug.h
include/core/: LindenmayerBuilder.h  LindenmayerEncoder.h  TreeGenerator.h
include/data/: TreeParams.h  TreeRules.h  TreeTurtle.h
include/helper/: Helpers.h
src/: TreeGenerator.cpp  main.cpp
src/core/: LindenmayerBuilder.cpp  LindenmayerEncoder.cpp  TreeGenerator.cpp
src/data/: TreeRules.cpp
